syntax = "proto3";

package auth;

service AuthService {
  rpc Register(RegisterRequest) returns (Token) {}
  rpc Login(LoginRequest) returns (Token) {}
  rpc CheckLogin(Token) returns (User) {}
}

message RegisterRequest {
  string login = 1;
  string password = 2;
  string nickname = 3;
  bytes image = 4;
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message User {
  string nickname = 1;
  int64 id = 2;
  string avatar = 3;
}

message Token {
  string token = 1;
}