syntax = "proto3";

package post;

service PostService {
    rpc GetPosts(WithPage) returns (GetPostsResponse) {}
    rpc GetPostById(GetPostByIdRequest) returns (Post) {}
    rpc GetPostsByAuthorId(GetPostByIdRequest) returns (GetPostsResponse) {}
    rpc Create(Post) returns (Success) {}
    rpc Update(Post) returns (Success) {}
    rpc Delete(DeleteRequest) returns (Success) {}
}

message Empty {}

message WithPage {
    int64 page = 1;
}

message Post {
    Author author = 1;
    optional int64 postId = 2;
    string title = 3;
    string description = 4;
    optional string createdAt = 5;
    optional string updatedAt = 6;
    repeated Comment comments = 7;
}

message Author {
  int64 id = 1;
  string nickname = 2;
}

message Comment {
  int64 commentId = 1;
  string content = 2;
  string createdAt = 3;
  Author author = 4;
}

message GetPostsResponse {
    repeated Post posts = 1;
}

message GetPostByIdRequest {
    int64 id = 1;
}

message Success {
    bool success = 1;
}
message DeleteRequest {
    int64 authorId = 1;
    int64 postId = 2;
}